fixed formatting colorwar marshie/marshie-blurb on mobile/smaller screen devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -778,6 +778,28 @@ a.button.minor-button {
   color: #ff3f46;
 }
 
+@media screen and (max-width:768px) {
+  .row {
+    margin-right: auto !important;
+    margin-left: auto !important;
+    display: flex;
+    align-items: center; 
+  }
+  
+  .col-md-3 {
+    width: 25%;
+  }
+
+  .col-md-9 {
+    width: 75%;
+  }
+
+  .row .col-md-9{
+    max-height: none; 
+    max-width: none;
+  }
+
+}
 
 /* Schedule
 ================================ */
